<resources>
    <string name="app_name">Logic University</string>

    <string name="auth">Authenticate with fingerprint</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">LOGIN</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_pending">Pending</string>
    <string name="title_fragment_delegate">Delegate</string>
    <string name="title_fragment_pending_dis">Pending Acknowledgements</string>
    <string name="title_fragment_past_dis">Past Acknowledgements</string>
    <string name="title_fragment_change_rep">Representative</string>
    <string name="title_fragment_finger_print">Finger Print</string>
    <string name="title_fragment_adj_voucher">Adjustment Voucher</string>
    <string name="title_fragment_past_orders">Past Orders</string>
    <string name="action_pending">Pending</string>
    <string name="action_pending_dis">Pending Disbursements</string>
    <string name="action_past_orders">Past Orders</string>
    <string name="action_pending_ack">Pending Acknowledgements</string>
    <string name="action_inventory_adj">Inventory Adjustment</string>
    <string name="action_past_dis">Past Acknowledgements</string>
    <string name="action_rep_change">Change Representative</string>
    <string name="action_delegate">Delegate</string>
    <string name="title_fragment_inventory">Inventory</string>
    <string name="title_fragment_pending_order_items">Pending Order Items</string>
    <string name="title_fragment_retrieval_form">Retrieval Forms</string>

    <string name="title_role">Department Head</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_filter">Filter</string>

    <string name="menu_home">Home</string>
    <string name="title_select_rep">Select Representative</string>
    <string name="title_select_emp">Select Employee</string>
    <string name="title_select_cp">Select Collection Point</string>
    <string name="title_menu_security">Security</string>
    <string name="menu_fingerprint">Fingerprint</string>
    <string name="title_fingerprint">Fingerprint Login</string>
    <string name="title_sub_fingerprint">Easy login with fingerprint</string>

    <string name="delegate_msg">You cannot delegate again!</string>
    <string name="title_frag_ret_form">Retrieval Form</string>
    <string name="title_frag_disbursement">Disbursement</string>
    <string name="title_frag_disbursement_os">Pending Disbursements</string>
    <string name="title_order_id">Order ID %1$d</string>
    <string name="text_total">Total: $ %1$d</string>
    <string name="label_rep">Representative :</string>
    <string name="action_change">CHANGE</string>
    <string name="hint_comment">Comment</string>
    <string name="action_accept">ACCEPT</string>
    <string name="action_reject">REJECT</string>

    <string name="label_category">CATEGORY</string>
    <string name="label_qty">QTY</string>
    <string name="label_unit_price">UNIT PRICE</string>
    <string name="label_price">PRICE</string>
    <string name="text_price">$ %1$d</string>
    <string name="text_for_number">%1$d</string>
    <string name="text_for_decimal_price">$ %1$.2f</string>

    <string name="title_popup_adj_voucher">Adjustment Voucher</string>

    <string name="biometric_failed">Fingerprint not recognized</string>

    <string name="title_reminder">Reminder</string>
    <string name="msg_fingerprint">Fingerprint login will now be used as an alternative to your password.</string>
    <string name="msg_fingerprint_err">Fingerprint login can be allowed for only one account in this device.</string>
    <string name="action_ok">OK</string>
    <string name="msg_fingerprint_login">Place your finger to continue</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ack">Acknowledge</string>

    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_failure">Login not successful!</string>
    <string name="biometric_cancelled">Authentication cancelled by user</string>
    <string name="biometric_success">Login Successful</string>

    <string name="label_from_date">From </string>
    <string name="label_to_date">To </string>
    <string name="label_emp">Employee </string>

    <string name="img_content_desc"> </string>
    <string name="text_empty_records">No records found</string>
    <string name="text_slash_sep">%1$d / %2$d</string>
    <string name="text_colon_sep">%1$s : %2$d</string>
    <string name="action_generate">Generate</string>
    <string name="title_dept">Department</string>
    <string name="title_qty">Quantity</string>
    <string name="title_required">Required</string>
    <string name="title_needed">Needed</string>
    <string name="title_actual">Actual</string>
    <string name="action_confirm">Confirm</string>
    <string name="title_item_desc">Item Description</string>
    <string name="title_dis_qty">Disburse Quantity</string>
    <string name="title_desc">Description</string>
    <string name="action_generate_update">Update</string>

    <string name="label_coll_pnt">Collection Point : </string>
    <string name="title_details">Details</string>
    <string name="label_item_num">Item Code</string>
    <string name="label_item_cat">Category : </string>
    <string name="label_item_qty_adj">Quantity Adjusted</string>
    <string name="label_item_desc">Description : </string>
    <string name="label_item_uom">Unit Of Measure : </string>
    <string name="label_item_stock_last">Last Stock : </string>
    <string name="label_item_stock_actual">Actual Stock</string>
    <string name="label_item_up">Unit Price</string>
    <string name="label_item_tp">Total Price</string>
    <string name="label_item_reason">Reason</string>

    <string name="action_stock_adj">Generate Adjustment Voucher</string>
    <string name="action_stock_adj_submit">submit</string>
</resources>
