<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_empty"
            android:text="@string/text_empty_records"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.5"
                    android:text="@string/title_item_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/title_qty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.3"
                    android:text="@string/title_dis_qty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lay_stock_items_body"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:textColor="@color/white"
            android:background="@color/colorLoginButton"
            android:text="@string/action_generate_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>