<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".activity.LoginActivity">

        <TextView
            android:text="@string/app_name"
            android:textSize="42sp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/id_username"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_border_et"
            android:hint="@string/prompt_username"
            android:layout_width="250dp"
            android:layout_height="50dp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_password"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_border_et"
            android:imeOptions="actionDone"
            android:hint="@string/prompt_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/id_login"
            android:text="@string/action_login"
            style="@style/btn_style"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="50dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
